--- a/projects.html
+++ b/projects.html
@@ -77,14 +77,14 @@
             <p class="section_title" style="padding-top: 2.5em"> Projects: <br><br></p>
             <div class="row">
                 <a class="project_div" href="https://github.com/PScottZero/Apogee-Artist"
-                   target="_blank" style="background: url('img/projects/apogee.png');
+                   target="_blank" style="background: url('img/projects/apogee.jpg');
                    background-size: cover">
                     <div class="surround_text">
                         <p> Apogee Artist </p>
                     </div>
                 </a>
                 <a class="project_div" href="https://github.com/PScottZero/Bitwise-Game-Maker"
-                   target="_blank" style="background: url('img/projects/bitwise.png');
+                   target="_blank" style="background: url('img/projects/bitwise.jpg');
                    background-size: cover">
                     <div class="surround_text">
                         <p> Bitwise Game Maker </p>
@@ -93,14 +93,14 @@
             </div>
             <div class="row">
                 <a class="project_div" href="https://github.com/PScottZero/Conways-Game-of-Life"
-                   target="_blank" style="background: url('img/projects/conway.png');
+                   target="_blank" style="background: url('img/projects/conway.jpg');
                    background-size: cover">
                     <div class="surround_text">
                         <p> Conway's Game of Life </p>
                     </div>
                 </a>
                 <a class="project_div" href="https://github.com/PScottZero/Easton-Coach-Driver-Report"
-                   target="_blank" style="background: url('img/projects/easton.png');
+                   target="_blank" style="background: url('img/projects/easton.jpg');
                    background-size: cover">
                     <div class="surround_text">
                         <p> Easton Coach Driver Report </p>
@@ -109,14 +109,14 @@
             </div>
             <div class="row">
                 <a class="project_div" href="https://github.com/PScottZero/ExGraph"
-                   target="_blank" style="background: url('img/projects/exgraph.png');
+                   target="_blank" style="background: url('img/projects/exgraph.jpg');
                    background-size: cover">
                     <div class="surround_text">
                         <p> ExGraph </p>
                     </div>
                 </a>
                 <a class="project_div" href="https://github.com/PScottZero/The-Hypothetical-Computer"
-                   target="_blank" style="background: url('img/projects/hc.png');
+                   target="_blank" style="background: url('img/projects/hc.jpg');
                    background-size: cover">
                     <div class="surround_text">
                         <p> The Hypothetical Computer </p>
@@ -125,14 +125,14 @@
             </div>
             <div class="row">
                 <a class="project_div" href="https://github.com/PScottZero/JavaPaint"
-                   target="_blank" style="background: url('img/projects/javapaint.png');
+                   target="_blank" style="background: url('img/projects/javapaint.jpg');
                    background-size: cover">
                     <div class="surround_text">
                         <p> Java Paint </p>
                     </div>
                 </a>
                 <a class="project_div" href="https://github.com/PScottZero/Lucas-Lehmer-Test-Kotlin"
-                   target="_blank" style="background: url('img/projects/lucas.png');
+                   target="_blank" style="background: url('img/projects/lucas.jpg');
                    background-size: cover">
                     <div class="surround_text">
                         <p> Lucas-Lehmer Primality Test </p>
@@ -141,14 +141,14 @@
             </div>
             <div class="row">
                 <a class="project_div" href="https://github.com/PScottZero/METAR-Decoder"
-                   target="_blank" style="background: url('img/projects/metar.png');
+                   target="_blank" style="background: url('img/projects/metar.jpg');
                    background-size: cover">
                     <div class="surround_text">
                         <p> METAR Decoder </p>
                     </div>
                 </a>
                 <a class="project_div" href="https://github.com/PScottZero/Recaman-Sequence-Visualizer"
-                   target="_blank" style="background: url('img/projects/recaman.png');
+                   target="_blank" style="background: url('img/projects/recaman.jpg');
                    background-size: cover">
                     <div class="surround_text">
                         <p> Recam&aacuten Series Visualizer </p>
@@ -157,14 +157,14 @@
             </div>
             <div class="row">
                 <a class="project_div" href="https://github.com/PScottZero/STP-Ground"
-                   target="_blank" style="background: url('img/projects/stp.png');
+                   target="_blank" style="background: url('img/projects/stp.jpg');
                    background-size: cover">
                     <div class="surround_text">
                         <p> STP Ground </p>
                     </div>
                 </a>
                 <a class="project_div" href="https://github.com/PScottZero/TerminalEnigma"
-                   target="_blank" style="background: url('img/projects/enigma.png');
+                   target="_blank" style="background: url('img/projects/enigma.jpg');
                    background-size: cover">
                     <div class="surround_text">
                         <p> Terminal Enigma </p>
@@ -173,7 +173,7 @@
             </div>
             <div class="row">
                 <a class="project_div" href="https://github.com/PScottZero/Toxicity-HackPSU-Fall2018"
-                   target="_blank" style="background: url('img/projects/toxicity.png');
+                   target="_blank" style="background: url('img/projects/toxicity.jpg');
                        background-size: cover">
                     <div class="surround_text">
                         <p> Toxicity </p>
