--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" media="screen and (max-width: 700px)" href="css/styles_mobile.css">
 
         <!-- google font link -->
-        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 
         <!-- website icon -->
         <link rel="icon" href="img/icons/favicon.png">
