--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </head>
 
     <!-- body -->
-    <body bgcolor="#666">
+    <body>
 
         <!-- header containing conway's game of life and website title -->
         <div id="canvas_container">
@@ -74,6 +74,8 @@
 
         <!-- part of website that holds content -->
         <div id="main_body">
+
+            <!-- education -->
             <p class="section_title" style="padding-top: 2.5em"> Education: <br><br></p>
             <div class="row">
                 <div class="content_div">
@@ -90,6 +92,7 @@
                 </div>
             </div>
 
+            <!-- programming languages -->
             <p class="section_title"> Programming Languages: <br><br></p>
             <div class="row">
                 <div class="content_div" style="background: #ffe2a5">
@@ -105,7 +108,6 @@
                     <p style="font-size: 36px">Python</p>
                 </div>
             </div>
-
             <div class="row">
                 <div class="content_div" style="background: #fffd93">
                     <img src="img/prg_icons/javascript.png" style="float: left">
@@ -121,6 +123,7 @@
                 </div>
             </div>
 
+            <!-- experience -->
             <p class="section_title"> Experience: <br><br></p>
             <div class="row">
                 <div class="content_div">
@@ -137,6 +140,7 @@
                 </div>
             </div>
 
+            <!-- relevant skills -->
             <p class="section_title"> Relevant Skills: <br><br></p>
             <div class="row">
                 <div class="content_div">
@@ -161,6 +165,7 @@
                 </div>
             </div>
 
+            <!-- hackathons -->
             <p class="section_title"> Hackathons: <br><br></p>
             <div class="row">
                 <div class="content_div" style="background: #8cdb8c">
@@ -177,6 +182,7 @@
                 </div>
             </div>
 
+            <!-- hobbies -->
             <p class="section_title"> Hobbies: <br><br></p>
             <div class="row">
                 <div class="content_div">
@@ -217,6 +223,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- website footer -->
         <div id="footer">
             <p> Created by Paul Scott with HTML, CSS, and JavaScript </p>
         </div>
