--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
     </head>
 
     <!-- body -->
-    <body bgcolor="#666">
+    <body>
 
         <!-- header containing conway's game of life and website title -->
         <div id="canvas_container">
@@ -74,113 +74,143 @@
 
         <!-- main body of website -->
         <div id="main_body">
+
+            <!-- projects -->
             <p class="section_title" style="padding-top: 2.5em"> Projects: <br><br></p>
             <div class="row">
+
+                <!-- apogee artist -->
                 <a class="project_div" href="https://github.com/PScottZero/Apogee-Artist"
                    target="_blank" style="background: url('img/projects/apogee.jpg');
                    background-size: cover">
-                    <div class="surround_text">
+                    <div class="project_text">
                         <p> Apogee Artist </p>
                     </div>
                 </a>
+
+                <!-- bitwise game maker -->
                 <a class="project_div" href="https://github.com/PScottZero/Bitwise-Game-Maker"
                    target="_blank" style="background: url('img/projects/bitwise.jpg');
                    background-size: cover">
-                    <div class="surround_text">
+                    <div class="project_text">
                         <p> Bitwise Game Maker </p>
                     </div>
                 </a>
             </div>
             <div class="row">
+
+                <!-- conway's game of life -->
                 <a class="project_div" href="https://github.com/PScottZero/Conways-Game-of-Life"
                    target="_blank" style="background: url('img/projects/conway.jpg');
                    background-size: cover">
-                    <div class="surround_text">
+                    <div class="project_text">
                         <p> Conway's Game of Life </p>
                     </div>
                 </a>
+
+                <!-- easton coach driver report -->
                 <a class="project_div" href="https://github.com/PScottZero/Easton-Coach-Driver-Report"
                    target="_blank" style="background: url('img/projects/easton.jpg');
                    background-size: cover">
-                    <div class="surround_text">
+                    <div class="project_text">
                         <p> Easton Coach Driver Report </p>
                     </div>
                 </a>
             </div>
             <div class="row">
+
+                <!-- exgraph -->
                 <a class="project_div" href="https://github.com/PScottZero/ExGraph"
                    target="_blank" style="background: url('img/projects/exgraph.jpg');
                    background-size: cover">
-                    <div class="surround_text">
+                    <div class="project_text">
                         <p> ExGraph </p>
                     </div>
                 </a>
+
+                <!-- the hypothetical computer -->
                 <a class="project_div" href="https://github.com/PScottZero/The-Hypothetical-Computer"
                    target="_blank" style="background: url('img/projects/hc.jpg');
                    background-size: cover">
-                    <div class="surround_text">
+                    <div class="project_text">
                         <p> The Hypothetical Computer </p>
                     </div>
                 </a>
             </div>
             <div class="row">
+
+                <!-- java paint -->
                 <a class="project_div" href="https://github.com/PScottZero/JavaPaint"
                    target="_blank" style="background: url('img/projects/javapaint.jpg');
                    background-size: cover">
-                    <div class="surround_text">
+                    <div class="project_text">
                         <p> Java Paint </p>
                     </div>
                 </a>
+
+                <!-- lucas lehmer primality test -->
                 <a class="project_div" href="https://github.com/PScottZero/Lucas-Lehmer-Test-Kotlin"
                    target="_blank" style="background: url('img/projects/lucas.jpg');
                    background-size: cover">
-                    <div class="surround_text">
+                    <div class="project_text">
                         <p> Lucas-Lehmer Primality Test </p>
                     </div>
                 </a>
             </div>
             <div class="row">
+
+                <!-- metar decoder -->
                 <a class="project_div" href="https://github.com/PScottZero/METAR-Decoder"
                    target="_blank" style="background: url('img/projects/metar.jpg');
                    background-size: cover">
-                    <div class="surround_text">
+                    <div class="project_text">
                         <p> METAR Decoder </p>
                     </div>
                 </a>
+
+                <!-- recaman sequence visualizer -->
                 <a class="project_div" href="https://github.com/PScottZero/Recaman-Sequence-Visualizer"
                    target="_blank" style="background: url('img/projects/recaman.jpg');
                    background-size: cover">
-                    <div class="surround_text">
+                    <div class="project_text">
                         <p> Recam&aacuten Series Visualizer </p>
                     </div>
                 </a>
             </div>
             <div class="row">
+
+                <!-- stp ground -->
                 <a class="project_div" href="https://github.com/PScottZero/STP-Ground"
                    target="_blank" style="background: url('img/projects/stp.jpg');
                    background-size: cover">
-                    <div class="surround_text">
+                    <div class="project_text">
                         <p> STP Ground </p>
                     </div>
                 </a>
+
+                <!-- terminal enigma -->
                 <a class="project_div" href="https://github.com/PScottZero/TerminalEnigma"
                    target="_blank" style="background: url('img/projects/enigma.jpg');
                    background-size: cover">
-                    <div class="surround_text">
+                    <div class="project_text">
                         <p> Terminal Enigma </p>
                     </div>
                 </a>
             </div>
             <div class="row">
+
+                <!-- toxicity -->
                 <a class="project_div" href="https://github.com/PScottZero/Toxicity-HackPSU-Fall2018"
                    target="_blank" style="background: url('img/projects/toxicity.jpg');
                        background-size: cover">
-                    <div class="surround_text">
+                    <div class="project_text">
                         <p> Toxicity </p>
                     </div>
                 </a>
             </div>
         </div>
+
+        <!-- website footer -->
         <div id="footer">
             <p> Created by Paul Scott with HTML, CSS, and JavaScript </p>
         </div>
