--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,9 @@
         <div id="canvas_container">
             <canvas id="conway"></canvas>
             <p id="title"><b>Paul Joseph Scott IV</b></p>
+
+            <!-- logo for mobile only -->
+            <img id="mobile_logo" src="img/icons/mobile_logo.png">
         </div>
 
         <!-- header containing links to other pages -->
