--- a/projects.html
+++ b/projects.html
@@ -93,7 +93,7 @@
 
                 <!-- bitwise game maker -->
                 <a class="project_div" href="https://github.com/PScottZero/Bitwise-Game-Maker"
-                   target="_blank" style="background: url('img/projects/bitwise.jpg');
+                   target="_blank" style="background: url('img/projects/bitwise.jpg') center;
                    background-size: cover">
                     <div class="project_text">
                         <p> Bitwise Game Maker </p>
@@ -171,6 +171,17 @@
                     </div>
                 </a>
 
+                <!-- potato chip-8 -->
+                <a class="project_div" href="https://github.com/PScottZero/Potato-Chip-8"
+                   target="_blank" style="background: url('img/projects/chip8.jpg');
+                   background-size: cover">
+                    <div class="project_text">
+                        <p> Potato Chip-8 </p>
+                    </div>
+                </a>
+            </div>
+            <div class="row">
+
                 <!-- recaman sequence visualizer -->
                 <a class="project_div" href="https://github.com/PScottZero/Recaman-Sequence-Visualizer"
                    target="_blank" style="background: url('img/projects/recaman.jpg');
@@ -179,8 +190,6 @@
                         <p> Recam&aacuten Series Visualizer </p>
                     </div>
                 </a>
-            </div>
-            <div class="row">
 
                 <!-- stp ground -->
                 <a class="project_div" href="https://github.com/PScottZero/STP-Ground"
@@ -190,8 +199,10 @@
                         <p> STP Ground </p>
                     </div>
                 </a>
+            </div>
+            <div class="row">
 
-                <!-- terminal enigma -->
+            	<!-- terminal enigma -->
                 <a class="project_div" href="https://github.com/PScottZero/TerminalEnigma"
                    target="_blank" style="background: url('img/projects/enigma.jpg');
                    background-size: cover">
@@ -199,12 +210,10 @@
                         <p> Terminal Enigma </p>
                     </div>
                 </a>
-            </div>
-            <div class="row">
 
                 <!-- toxicity -->
                 <a class="project_div" href="https://github.com/PScottZero/Toxicity-HackPSU-Fall2018"
-                   target="_blank" style="background: url('img/projects/toxicity.jpg');
+                   target="_blank" style="background: url('img/projects/toxicity.jpg') center;
                        background-size: cover">
                     <div class="project_text">
                         <p> Toxicity </p>
