--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <title>Paul J Scott</title>
 
         <!-- link to css -->
-        <link rel="stylesheet" media="screen and (min-width: 700px)" href="css/styles.css">
-        <link rel="stylesheet" media="screen and (max-width: 700px)" href="css/styles_mobile.css">
+        <link rel="stylesheet" href="css/styles.css">
 
         <!-- google font link -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
