--- a/projects.html
+++ b/projects.html
@@ -78,7 +78,7 @@
         <div id="main_body">
 
             <!-- projects -->
-            <p class="section_title" style="padding-top: 2.5em"> Projects: <br><br></p>
+            <p class="section_title"> Projects: <br><br></p>
             <div class="row">
 
                 <!-- apogee artist -->
