--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div id="main_body">
 
             <!-- education -->
-            <p class="section_title" style="padding-top: 2.5em"> Education: <br><br></p>
+            <p class="section_title"> Education: <br><br></p>
             <div class="row">
                 <div class="content_div">
                     <img src="img/edu_icons/psu.png">
