changed some icons to svg files

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p id="title"><b>Paul Joseph Scott IV</b></p>
 
             <!-- logo for mobile only -->
-            <img id="mobile_logo" src="img/icons/mobile_logo.png">
+            <img id="mobile_logo" src="img/icons/mobile_logo.svg">
         </div>
 
         <!-- header containing links to other pages -->
@@ -47,28 +47,28 @@
                 <!-- link to about page -->
                 <div class="image_container">
                     <a href="index.html">
-                        <img src="img/icons/icon_about.png">
+                        <img src="img/icons/icon_about.svg">
                     </a>
                 </div>
 
                 <!-- link to projects page -->
                 <div class="image_container">
                     <a href="projects.html">
-                        <img src="img/icons/icon_projects.png">
+                        <img src="img/icons/icon_projects.svg">
                     </a>
                 </div>
 
                 <!-- link to resume [External: Google Drive] -->
                 <div class="image_container">
                     <a href="https://drive.google.com/file/d/1zDxcunVwYQK74Bv3SwEG3ePQrxsx8Bdu/view?usp=sharing" target="_blank">
-                        <img src="img/icons/icon_resume.png">
+                        <img src="img/icons/icon_resume.svg">
                     </a>
                 </div>
 
                 <!-- link to linkedin [External: LinkedIn] -->
                 <div class="image_container">
                     <a href="https://www.linkedin.com/in/paul-scott-047858140/" target="_blank">
-                        <img src="img/icons/icon_linkedin.png">
+                        <img src="img/icons/icon_linkedin.svg">
                     </a>
                 </div>
             </div>
@@ -188,39 +188,39 @@
             <p class="section_title"> Hobbies: <br><br></p>
             <div class="row">
                 <div class="content_div">
-                    <img src="img/hob_icons/guitar.png" style="float: left">
+                    <img src="img/hob_icons/guitar.svg" style="float: left">
                     <p style="font-size: 36px">Guitar</p>
                 </div>
                 <div class="content_div">
-                    <img src="img/hob_icons/bass.png" style="float: left">
+                    <img src="img/hob_icons/bass.svg" style="float: left">
                     <p style="font-size: 36px">Bass</p>
                 </div>
                 <div class="content_div">
-                    <img src="img/hob_icons/piano.png" style="float: left">
+                    <img src="img/hob_icons/piano.svg" style="float: left">
                     <p style="font-size: 36px">Piano</p>
                 </div>
             </div>
             <div class="row">
                 <div class="content_div">
-                    <img src="img/hob_icons/uke.png" style="float: left">
+                    <img src="img/hob_icons/ukulele.svg" style="float: left">
                     <p style="font-size: 36px">Ukulele</p>
                 </div>
                 <div class="content_div">
-                    <img src="img/hob_icons/vinyl.png" style="float: left">
+                    <img src="img/hob_icons/vinyl.svg" style="float: left">
                     <p style="font-size: 36px">Vinyls</p>
                 </div>
                 <div class="content_div">
-                    <img src="img/hob_icons/mac.png" style="float: left">
+                    <img src="img/hob_icons/mac.svg" style="float: left">
                     <p style="font-size: 36px">Old Tech</p>
                 </div>
             </div>
             <div class="row">
                 <div class="content_div">
-                    <img src="img/hob_icons/plane.png" style="float: left">
+                    <img src="img/hob_icons/plane.svg" style="float: left">
                     <p style="font-size: 36px">Aviation</p>
                 </div>
                 <div class="content_div">
-                    <img src="img/hob_icons/coin.png" style="float: left">
+                    <img src="img/hob_icons/coin.svg" style="float: left">
                     <p style="font-size: 36px">Coin Colleting</p>
                 </div>
             </div>
