--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
             <p id="title"><b>Paul Joseph Scott IV</b></p>
 
             <!-- logo for mobile only -->
-            <img id="mobile_logo" src="img/icons/mobile_logo.png">
+            <img id="mobile_logo" src="img/icons/mobile_logo.svg">
         </div>
 
         <!-- header containing links to other pages -->
@@ -47,28 +47,28 @@
                 <!-- link to about page -->
                 <div class="image_container">
                     <a href="index.html">
-                        <img src="img/icons/icon_about.png">
+                        <img src="img/icons/icon_about.svg">
                     </a>
                 </div>
 
                 <!-- link to projects page -->
                 <div class="image_container">
                     <a href="projects.html">
-                        <img src="img/icons/icon_projects.png">
+                        <img src="img/icons/icon_projects.svg">
                     </a>
                 </div>
 
                 <!-- link to resume [External: Google Drive] -->
                 <div class="image_container">
                     <a href="https://drive.google.com/file/d/1zDxcunVwYQK74Bv3SwEG3ePQrxsx8Bdu/view?usp=sharing" target="_blank">
-                        <img src="img/icons/icon_resume.png">
+                        <img src="img/icons/icon_resume.svg">
                     </a>
                 </div>
 
                 <!-- link to linkedin [External: LinkedIn] -->
                 <div class="image_container">
                     <a href="https://www.linkedin.com/in/paul-scott-047858140/" target="_blank">
-                        <img src="img/icons/icon_linkedin.png">
+                        <img src="img/icons/icon_linkedin.svg">
                     </a>
                 </div>
             </div>
