added clubs section

--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@
             <div class="row">
                 <div class="content_div">
                     <img src="img/exp_icons/lunar.jpg">
-                    <p><b> Lunar Lion </b><br> Ground Control Software Lead <br> Aug 2018-Present </p>
+                    <p><b> Lunar Lion </b><br> <i>Ground Control Lead</i> <br> Aug 2018-Present </p>
                 </div>
                 <div class="content_div">
                     <img src="img/exp_icons/easton.jpg">
-                    <p><b> Easton Coach Company </b><br> Programmer <br> Jun-Aug 2018 </p>
+                    <p><b> Easton Coach Company </b><br> <i>Software Engineer</i> <br> Summer 2018 </p>
                 </div>
                 <div class="content_div">
                     <img src="img/exp_icons/wvpl.png">
-                    <p><b> Wissahickon Valley Public Library</b><br> IT Volunteer <br> Jun-Aug 2016 </p>
+                    <p><b> Wissahickon Valley Public Library</b><br> <i>IT Volunteer</i> <br> Summer 2016 </p>
                 </div>
             </div>
 
@@ -167,20 +167,33 @@
                 </div>
             </div>
 
+            <!-- clubs -->
+            <p class="section_title"> Clubs: <br><br></p>
+            <div class="row">
+                <div class="content_div">
+                    <img src="img/exp_icons/lunar.jpg">
+                    <p> <b>Lunar Lion</b> <br> Aug 2017-Present </p>
+                </div>
+                <div class="content_div">
+                    <img src="img/exp_icons/acm.jpg">
+                    <p> <b>ACM</b> <br> Sep 2018-Present </p>
+                </div>
+            </div>
+
             <!-- hackathons -->
             <p class="section_title"> Hackathons: <br><br></p>
             <div class="row">
                 <div class="content_div">
                     <img src="img/hack_icons/icpc.png">
-                    <p style="font-size: 36px">ICPC <br> Fall 2018</p>
+                    <p> <b>ICPC</b> <br> Fall 2018</p>
                 </div>
                 <div class="content_div" style="background: #5e9bff">
                     <img src="img/hack_icons/hackpsu.png">
-                    <p style="font-size: 36px">HackPSU <br> Fall 2018</p>
+                    <p> <b>HackPSU</b> <br> Fall 2018</p>
                 </div>
                 <div class="content_div" style="background: #8cdb8c">
                     <img src="img/hack_icons/hackpsu.png">
-                    <p style="font-size: 36px">HackPSU <br> Spring 2018</p>
+                    <p> <b>HackPSU</b> <br> Spring 2018</p>
                 </div>
             </div>
 
@@ -221,7 +234,7 @@
                 </div>
                 <div class="content_div">
                     <img src="img/hob_icons/coin.svg" style="float: left">
-                    <p style="font-size: 36px">Coin Colleting</p>
+                    <p style="font-size: 36px">Coin Collecting</p>
                 </div>
             </div>
         </div>
