--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                 <!-- link to resume [External: Google Drive] -->
                 <div class="image_container">
-                    <a href="https://drive.google.com/file/d/1zDxcunVwYQK74Bv3SwEG3ePQrxsx8Bdu/view?usp=sharing" target="_blank">
+                    <a href="https://drive.google.com/open?id=1Z79TNs30ttAftoWwJbqm93X77OljiM3L" target="_blank">
                         <img src="img/icons/icon_resume.svg">
                     </a>
                 </div>
