--- a/projects.html
+++ b/projects.html
@@ -170,23 +170,23 @@
                     </div>
                 </a>
 
-                <!-- potato chip-8 -->
-                <a class="project_div" href="https://github.com/PScottZero/Potato-Chip-8"
-                   target="_blank" style="background: url('img/projects/chip8.jpg');
-                   background-size: cover">
-                    <div class="project_text">
-                        <p> Potato Chip-8 </p>
-                    </div>
-                </a>
-            </div>
-            <div class="row">
-
                 <!-- recaman sequence visualizer -->
                 <a class="project_div" href="https://github.com/PScottZero/Recaman-Sequence-Visualizer"
                    target="_blank" style="background: url('img/projects/recaman.jpg');
                    background-size: cover">
                     <div class="project_text">
                         <p> Recam&aacuten Series Visualizer </p>
+                    </div>
+                </a>
+            </div>
+            <div class="row">
+
+                <!-- silicon eight -->
+                <a class="project_div" href="https://github.com/PScottZero/SiliconEight"
+                   target="_blank" style="background: url('img/projects/silicon.jpg');
+                   background-size: cover">
+                    <div class="project_text">
+                        <p> SiliconEight </p>
                     </div>
                 </a>
 
