--- a/projects.html
+++ b/projects.html
@@ -182,7 +182,7 @@
             <div class="row">
 
                 <!-- silicon eight -->
-                <a class="project_div" href="https://github.com/PScottZero/SiliconEight"
+                <a class="project_div" href="https://pjs4.com/SiliconEight"
                    target="_blank" style="background: url('img/projects/silicon.jpg');
                    background-size: cover">
                     <div class="project_text">
