--- a/index.html
+++ b/index.html
@@ -82,7 +82,13 @@
             <div class="row">
                 <div class="content_div">
                     <img src="img/edu_icons/psu.png">
-                    <p><b> Penn State </b><br> Computer Science <br> w/ Math Minor <br> 2017-2021 </p>
+                    <p>
+                        <b> Penn State </b><br>
+                        Sophomore <br>
+                        Computer Science <br>
+                        w/ Math Minor <br>
+                        GPA 3.98/4.00
+                    </p>
                 </div>
                 <div class="content_div">
                     <img src="img/edu_icons/shc.png">
@@ -90,36 +96,40 @@
                 </div>
                 <div class="content_div">
                     <img src="img/edu_icons/whs.png">
-                    <p><b> Wissahickon High School </b><br> 2013-2017 </p>
+                    <p><b> Wissahickon High School </b><br>
+                        Graduated 2017 <br>
+                        7 AP Classes <br>
+                        GPA 3.8/4.0
+                    </p>
                 </div>
             </div>
 
             <!-- programming languages -->
             <p class="section_title"> Programming Languages: <br><br></p>
             <div class="row">
-                <div class="content_div" style="background: #ffe2a5">
+                <div class="content_div" style="background: linear-gradient(to right, #ffe5af, #ffab00)">
                     <img src="img/prg_icons/java.png" style="float: left">
                     <p style="font-size: 36px">Java</p>
                 </div>
-                <div class="content_div" style="background: #c9a4ff">
+                <div class="content_div" style="background: linear-gradient(to right, #c9a4ff, #8532ff)">
                     <img src="img/prg_icons/kotlin.png" style="float: left">
                     <p style="font-size: 36px">Kotlin</p>
                 </div>
-                <div class="content_div" style="background: #93e9ff">
+                <div class="content_div" style="background: linear-gradient(to right, #93e8ff, #14aad1)">
                     <img src="img/prg_icons/python.png" style="float: left">
                     <p style="font-size: 36px">Python</p>
                 </div>
             </div>
             <div class="row">
-                <div class="content_div" style="background: #fffd93">
+                <div class="content_div" style="background: linear-gradient(to right, #fffd93, #efeb17)">
                     <img src="img/prg_icons/javascript.png" style="float: left">
                     <p style="font-size: 36px">JavaScript</p>
                 </div>
-                <div class="content_div" style="background: #5e9bff">
+                <div class="content_div" style="background: linear-gradient(to right, #7caeff, #0e5ad6)">
                     <img src="img/prg_icons/c.png" style="float: left">
                     <p style="font-size: 36px">C / C++</p>
                 </div>
-                <div class="content_div" style="background: #e0ac1d">
+                <div class="content_div" style="background: linear-gradient(to right, #ffab72, #e2630d)">
                     <img src="img/prg_icons/html.png" style="float: left">
                     <p style="font-size: 36px">HTML / CSS</p>
                 </div>
@@ -187,11 +197,11 @@
                     <img src="img/hack_icons/icpc.png">
                     <p> <b>ICPC</b> <br> Fall 2018</p>
                 </div>
-                <div class="content_div" style="background: #5e9bff">
+                <div class="content_div">
                     <img src="img/hack_icons/hackpsu.png">
                     <p> <b>HackPSU</b> <br> Fall 2018</p>
                 </div>
-                <div class="content_div" style="background: #8cdb8c">
+                <div class="content_div">
                     <img src="img/hack_icons/hackpsu.png">
                     <p> <b>HackPSU</b> <br> Spring 2018</p>
                 </div>
