--- a/projects.html
+++ b/projects.html
@@ -78,7 +78,28 @@
         <div id="main_body">
 
             <!-- projects -->
-            <p class="section_title"> Projects: <br><br></p>
+            <p class="section_title"> Featured Projects: <br><br></p>
+            <div class="row">
+                <!-- siliconeight javascript -->
+                <a class="project_div" href="https://pjs4.com/SiliconEight-Javascript"
+                   target="_blank" style="background: url('img/projects/silicon_javascript.jpg') center;
+                       background-size: cover">
+                    <div class="project_text">
+                        <p> SiliconEight (Javascript) </p>
+                    </div>
+                </a>
+
+                <!-- pi cipher -->
+                <a class="project_div" href="https://pjs4.com/Pi-Cipher"
+                   target="_blank" style="background: url('img/projects/picipher.jpg') center top;
+                       background-size: cover">
+                    <div class="project_text">
+                        <p> π-cipher </p>
+                    </div>
+                </a>
+            </div>
+
+            <p class="section_title"> Other Projects: <br><br></p>
             <div class="row">
 
                 <!-- apogee artist -->
