--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             </div>
 
             <!-- hobbies -->
-            <p class="section_title"> Hobbies: <br><br></p>
+            <p class="section_title"> Hobbies + Interests: <br><br></p>
             <div class="row">
                 <div class="content_div">
                     <img src="img/hob_icons/guitar.svg" style="float: left">
@@ -243,8 +243,12 @@
                     <p style="font-size: 36px">Aviation</p>
                 </div>
                 <div class="content_div">
+                    <img src="img/hob_icons/coaster.svg" style="float: left">
+                    <p style="font-size: 36px">Coasters</p>
+                </div>
+                <div class="content_div">
                     <img src="img/hob_icons/coin.svg" style="float: left">
-                    <p style="font-size: 36px">Coin Collecting</p>
+                    <p style="font-size: 36px">Coins</p>
                 </div>
             </div>
         </div>
